--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -24,12 +24,18 @@ body:
       label: Steps to reproduce
       description: This may include a build schematic, a video, or detailed instructions to help reconstruct the issue.
     validations:
-      required: true
+      required: true   
+
+  - type: textarea
+    id: additional-context
+    attributes:
+      label: Additional context
+      description: Add any other context about the problem here, such as screenshots, logs or other relevant information.
 
   - type: checkboxes
-    id: agreements
+    id: checklist
     attributes:
-      label: Agreements
+      label: Checklist
       description: Please agree to the following.
       options:
         - label: I am running the latest version of the plugin.
@@ -40,9 +46,5 @@ body:
           required: false
         - label: My server software & version is supported by this plugin.
           required: true
-
-  - type: textarea
-    id: additional-context
-    attributes:
-      label: Additional context
-      description: Add any other context about the problem here, such as screenshots, logs or other relevant information.
+        - label: I am willing to cooperate to get this issue resolved faster, including providing any additional information requested or testing new builds
+          required: true
