--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,4 +3,4 @@ paper-api = { module = "io.papermc.paper:paper-api", version = "1.21.7-R0.1-SNAP
 
 [plugins]
 run-paper = { id = "xyz.jpenilla.run-paper", version = "2.3.1" }
-pluginyml = { id = "de.eldoria.plugin-yml.paper", version = "0.7.1" }
+yml-paper = { id = "de.eldoria.plugin-yml.paper", version = "0.7.1" }
