--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [libraries]
-paper-api = { module = "io.papermc.paper:paper-api", version = "1.21.8-R0.1-SNAPSHOT" }
+velocity-api = { module = "com.velocitypowered:velocity-api", version = "3.4.0-SNAPSHOT" }
 
 [plugins]
-run-paper = { id = "xyz.jpenilla.run-paper", version = "3.0.0" }
-yml-paper = { id = "de.eldoria.plugin-yml.paper", version = "0.8.0" }
+run-velocity = { id = "xyz.jpenilla.run-velocity", version = "3.0.0" }
